# Codex-Manager

./: .gitignore  Cargo.toml  README.md  analysis_516_reasoning_token_issue.md  analysis_codex_sdk_vs_ce.md  gateway_logs_failure.txt  task.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release-all.yml
.teamwork/discussions/: 2026-07-05_admin-ranking-daily-rollup-evaluation.md  2026-07-07_上游差异与CE清理结论.md
.teamwork/docs/: github-release-guide.md
.teamwork/progress/: 2026-06-04_account-frontend-pagination.md  2026-06-04_account-list-decoration.md  2026-06-04_account-usage-scoped-list.md  2026-06-04_ad-cleanup.md  2026-06-04_api-key-backend-pagination.md  2026-06-04_api-key-frontend-pagination.md  2026-06-04_logs-account-lookup.md  2026-06-04_logs-aggregate-api-lookup.md  2026-06-04_logs-api-key-lookup.md  2026-06-04_quota-model-pools-lightweight.md  2026-06-04_rustfmt-gate.md  2026-06-04_security-ci-audit.md  2026-06-04_startup-snapshot-slim.md  2026-06-05_account-manager-users-pagination.md  2026-06-05_aggregate-api-backend-pagination.md  2026-06-05_apikey-owner-scoped-lookup.md  2026-06-05_apikey-usage-stats-scoped.md  2026-06-05_dashboard-admin-usage-ranking-limit.md  2026-06-05_dashboard-member-summary-scoped.md  2026-06-05_gateway-trace-candidate-pool-limit.md  2026-06-05_models-routing-source-lookup.md  2026-06-05_observability-retention-compaction.md  2026-06-05_quota-model-pool-sources-pagination.md  2026-06-05_quota-model-pools-summary-no-source-scan.md  (+67 more)
apps/: next.config.ts  package.json
docker/: docker-compose.release.yml
(+311 files in other folders)
