[workspace]
members = [
  "crates/core",
  "crates/service",
  "crates/start",
  "crates/web",
  "crates/db-optimize"
]
default-members = [
  "crates/core",
  "crates/service",
  "crates/start",
  "crates/web"
]
exclude = [
  "apps/src-tauri"
]
resolver = "2"

[workspace.package]
version = "0.3.10"

